[INFER] Remove isTypeCallerMonitored and rejoin from native calls triggering recompilation, bug 638977.